# qlego

./: .gitignore  CMakeLists.txt  README.md  qlego.lib
.github/workflows/: cmake-multi-platform.yml
examples/: quantum_coinflip.cpp
include/qlego/: circuit.hpp  gate.hpp  qubit.hpp  simulator.hpp
src/: circuit.cpp  qubit.cpp  simulator.cpp
